--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/FPS_Level.FPS_Level
-EditorStartupMap=/Game/Maps/FPS_Level.FPS_Level
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Blueprints/GameMode/FPS_GamemMode.FPS_GamemMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
